#ifndef LogSinkType_enum_hpp
#define LogSinkType_enum_hpp




enum class LogSinkType_enum{
    Console,
    File,
    Socket,
};
























#endif