#ifndef TelemetrySrc_enum_HPP
#define TelemetrySrc_enum_HPP





enum class TelemetrySrc_enum{
    CPU,
    RAM,
    GPU,
};











#endif