@startuml IntegratedSystem_ClassDiagram

' ============================================================================
' VISUAL STYLING
' ============================================================================

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing true
skinparam roundcorner 10

' Color scheme for phases
skinparam package {
    BackgroundColor<<phase1>> #E3F2FD
    BorderColor<<phase1>> #1976D2
    FontColor<<phase1>> #0D47A1

    BackgroundColor<<phase2>> #F3E5F5
    BorderColor<<phase2>> #7B1FA2
    FontColor<<phase2>> #4A148C

    BackgroundColor<<phase3>> #E8F5E9
    BorderColor<<phase3>> #388E3C
    FontColor<<phase3>> #1B5E20
}

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor #424242
}

skinparam note {
    BackgroundColor #FFF9C4
    BorderColor #F57F17
}

title **Complete System Architecture**\n//Phases 1, 2, and 3//

left to right direction

' ============================================================================
' PHASE 1: LOGGING SYSTEM
' ============================================================================

package "Phase 1: Logging System" <<phase1>> {
    enum Severity {
        DEBUG
        INFO
        WARNING
        ERROR
        CRITICAL
    }

    class LogMessage {
        - appName: std::string
        - context: std::string
        - timeStamp: std::string
        - severity: Severity
        - text: std::string
        --
        + LogMessage(appName, context, severity, text)
        + getAppName(): std::string
        + getContext(): std::string
        + getTimeStamp(): std::string
        + getSeverity(): Severity
        + getText(): std::string
        --
        + {static} operator<<(os, logMessage): std::ostream&
    }

    interface ILogSink <<interface>> {
        + {abstract} write(message: LogMessage): void
        + {abstract} ~ILogSink()
    }

    class ConsoleSinkImpl {
        + write(message: LogMessage): void
    }

    class FileSinkImpl {
        - filePath: std::string
        - fileStream: std::ofstream
        --
        + FileSinkImpl(filePath: std::string)
        + write(message: LogMessage): void
    }

    class LogManager {
        - sinks: std::vector<std::shared_ptr<ILogSink>>
        - buffer: RingBuffer<LogMessage>
        --
        + LogManager(bufferSize: size_t = 100)
        + addSink(sink: std::shared_ptr<ILogSink>): void
        + log(message: LogMessage): void
        + flush(): void
    }
}

' ============================================================================
' PHASE 2: RAII WRAPPERS & TELEMETRY SOURCES
' ============================================================================

package "Phase 2: RAII Wrappers & Telemetry" <<phase2>> {
    class SafeFile {
        - fd: int
        - filepath: std::string
        --
        + SafeFile(path: std::string, flags: int)
        + SafeFile(const SafeFile&) = delete
        + operator=(const SafeFile&) = delete
        + SafeFile(SafeFile&&) noexcept
        + operator=(SafeFile&&) noexcept
        + ~SafeFile()
        --
        + isValid(): bool
        + getFd(): int
        + read(buffer: void*, count: size_t): ssize_t
        + write(buffer: const void*, count: size_t): ssize_t
    }

    class SafeSocket {
        - sockfd: int
        - socketPath: std::string
        - isServerSocket: bool
        --
        + SafeSocket()
        + SafeSocket(const SafeSocket&) = delete
        + operator=(const SafeSocket&) = delete
        + SafeSocket(SafeSocket&&) noexcept
        + operator=(SafeSocket&&) noexcept
        + ~SafeSocket()
        --
        + createSocket(): bool
        + bind(path: std::string): bool
        + listen(backlog: int): bool
        + accept(): SafeSocket
        + connect(path: std::string): bool
        + read(buffer: void*, count: size_t): ssize_t
        + write(buffer: const void*, count: size_t): ssize_t
        + isValid(): bool
        + getFd(): int
        - cleanup(): void
    }

    class SocketSinkImpl {
        - socket: SafeSocket
        - socketPath: std::string
        - connected: bool
        --
        + SocketSinkImpl(path: std::string)
        + write(message: LogMessage): void
        - ensureConnected(): bool
        - formatMessage(message: LogMessage): std::string
    }

    interface ITelemetrySource <<interface>> {
        + {abstract} openSource(): bool
        + {abstract} readSource(out: std::string&): bool
        + {abstract} ~ITelemetrySource()
    }

    class FileTelemetrySourceImpl {
        - file: SafeFile
        - filepath: std::string
        --
        + FileTelemetrySourceImpl(path: std::string)
        + openSource(): bool
        + readSource(out: std::string&): bool
    }

    class SocketTelemetrySourceImpl {
        - serverSocket: SafeSocket
        - clientSocket: SafeSocket
        - socketPath: std::string
        --
        + SocketTelemetrySourceImpl(socketPath: std::string)
        + openSource(): bool
        + readSource(out: std::string&): bool
    }

    class SystemTelemetryWriter {
        - outputFile: SafeFile
        - outputPath: std::string
        --
        + SystemTelemetryWriter(outputPath: std::string)
        + writeCpuTelemetry(): bool
        + writeMemoryTelemetry(): bool
        + isOpen(): bool
    }
}

' ============================================================================
' PHASE 3: FORMATTERS, POLICIES, PATTERNS & TEMPLATES
' ============================================================================

package "Phase 3: Formatters, Policies & Design Patterns" <<phase3>> {
    enum TelemetrySrc_enum {
        CPU
        GPU
        RAM
    }

    enum SeverityLvl_enum {
        INFO
        WARNING
        CRITICAL
    }

    enum LogSinkType_enum {
        CONSOLE
        FILE
        SOCKET
    }

    class CpuPolicy <<struct>> {
        + {static} context: TelemetrySrc_enum = CPU
        + {static} unit: std::string_view = "%"
        + {static} WARNING: float = 75.0f
        + {static} CRITICAL: float = 90.0f
        --
        + {static} inferSeverity(val: float): SeverityLvl_enum
    }

    class GpuPolicy <<struct>> {
        + {static} context: TelemetrySrc_enum = GPU
        + {static} unit: std::string_view = "%"
        + {static} WARNING: float = 80.0f
        + {static} CRITICAL: float = 95.0f
        --
        + {static} inferSeverity(val: float): SeverityLvl_enum
    }

    class RamPolicy <<struct>> {
        + {static} context: TelemetrySrc_enum = RAM
        + {static} unit: std::string_view = "%"
        + {static} WARNING: float = 70.0f
        + {static} CRITICAL: float = 85.0f
        --
        + {static} inferSeverity(val: float): SeverityLvl_enum
    }

    class "LogFormatter<Policy>" as LogFormatter {
        - msgDescription(val: float): std::string
        - telemetrySourceToString(src: TelemetrySrc_enum): std::string
        - convertToPhase1Severity(phase3_sev: SeverityLvl_enum): Severity
        --
        + formatDataToLogMsg(raw: std::string): std::optional<LogMessage>
    }

    class LogSinkFactory <<static>> {
        + {static} create(type: LogSinkType_enum, param: string): shared_ptr<ILogSink>
    }

    class LogManagerBuilder {
        - sinks: std::vector<std::shared_ptr<ILogSink>>
        --
        + LogManagerBuilder()
        + addSink(sink: std::shared_ptr<ILogSink>): LogManagerBuilder&
        + build(): LogManager
    }

    class "RingBuffer<T>" as RingBuffer {
        - buffer: std::vector<std::optional<T>>
        - head: size_t
        - tail: size_t
        - count: size_t
        - capacity: size_t
        --
        + RingBuffer(capacity: size_t)
        + RingBuffer(const RingBuffer&) = delete
        + operator=(const RingBuffer&) = delete
        + RingBuffer(RingBuffer&&) noexcept
        + operator=(RingBuffer&&) noexcept
        --
        + tryPush(item: T&&): bool
        + tryPop(item: T&): bool
        + isFull(): bool
        + isEmpty(): bool
        + size(): size_t
        + getCapacity(): size_t
    }
}

' ============================================================================
' PHASE 1 RELATIONSHIPS
' ============================================================================

' Interface implementations
ILogSink <|.. ConsoleSinkImpl : <<implements>>
ILogSink <|.. FileSinkImpl : <<implements>>

' LogManager aggregation and composition
LogManager o-- "0..*" ILogSink : manages >
LogMessage --> Severity : <<uses>>

' ============================================================================
' PHASE 2 RELATIONSHIPS
' ============================================================================

' Socket sink extends Phase 1
ILogSink <|.. SocketSinkImpl : <<implements>>
SocketSinkImpl *-- SafeSocket : <<uses>>

' Telemetry source interface implementations
ITelemetrySource <|.. FileTelemetrySourceImpl : <<implements>>
ITelemetrySource <|.. SocketTelemetrySourceImpl : <<implements>>

' RAII wrapper usage
FileTelemetrySourceImpl *-- SafeFile : <<contains>>
SocketTelemetrySourceImpl *-- "2" SafeSocket : server+client >
SystemTelemetryWriter *-- SafeFile : <<contains>>

' ============================================================================
' PHASE 3 RELATIONSHIPS
' ============================================================================

' Policy dependencies on enums
CpuPolicy --> TelemetrySrc_enum : <<uses>>
CpuPolicy --> SeverityLvl_enum : <<uses>>
GpuPolicy --> TelemetrySrc_enum : <<uses>>
GpuPolicy --> SeverityLvl_enum : <<uses>>
RamPolicy --> TelemetrySrc_enum : <<uses>>
RamPolicy --> SeverityLvl_enum : <<uses>>

' LogFormatter template policy usage
LogFormatter ..> CpuPolicy : <<Policy>>
LogFormatter ..> GpuPolicy : <<Policy>>
LogFormatter ..> RamPolicy : <<Policy>>
LogFormatter ..> LogMessage : <<creates>>
LogFormatter --> Severity : <<converts to>>
LogFormatter --> SeverityLvl_enum : <<reads from>>
LogFormatter --> TelemetrySrc_enum : <<reads from>>

' Factory Pattern - creates concrete sinks
LogSinkFactory ..> ILogSink : <<creates>>
LogSinkFactory ..> LogSinkType_enum : <<uses>>
LogSinkFactory ..> ConsoleSinkImpl : <<instantiates>>
LogSinkFactory ..> FileSinkImpl : <<instantiates>>
LogSinkFactory ..> SocketSinkImpl : <<instantiates>>

' Builder Pattern - constructs LogManager
LogManagerBuilder ..> LogManager : <<builds>>
LogManagerBuilder o-- "0..*" ILogSink : collects >

' RingBuffer composition - LogManager contains RingBuffer
LogManager *-- RingBuffer : <<buffer>>

' ============================================================================
' CROSS-PHASE INTEGRATION
' ============================================================================

' Phase 3 LogFormatter produces LogMessages for Phase 1 LogManager
LogFormatter ..> LogManager : <<feeds messages to>>

' ============================================================================
' NOTES
' ============================================================================

note right of ILogSink
    **Strategy Pattern**
    Different sink implementations:
    • ConsoleSinkImpl (stdout)
    • FileSinkImpl (file I/O)
    • SocketSinkImpl (network)
end note

note bottom of LogManager
    **Core Logger**
    • Manages multiple sinks
    • Uses RingBuffer for message buffering
    • Flushes buffered messages to all sinks
end note

note right of SafeFile
    **RAII Wrapper (Rule of 5)**
    Automatically manages file descriptor
    • Move-only semantics (no copy)
    • Automatic cleanup on destruction
    • Exception-safe resource handling
end note

note right of SafeSocket
    **RAII Wrapper (Rule of 5)**
    Automatically manages socket lifecycle
    • Move-only semantics (no copy)
    • Supports server & client modes
    • Automatic cleanup and error handling
end note

note bottom of ITelemetrySource
    **Strategy Pattern**
    Different telemetry sources:
    • FileTelemetrySourceImpl (reads files)
    • SocketTelemetrySourceImpl (network data)
    • SystemTelemetryWriter (proc filesystem)
end note

note right of LogFormatter
    **Policy-Based Design**
    Template-based compile-time customization
    • Zero-cost abstraction
    • Type-safe configuration
    • Uses CpuPolicy/GpuPolicy/RamPolicy
end note

note bottom of CpuPolicy
    **Compile-Time Policies**
    Each policy provides:
    • Thresholds (WARNING, CRITICAL)
    • Context (CPU/GPU/RAM)
    • Severity inference logic
    **All resolved at compile-time!**
end note

note right of LogSinkFactory
    **Factory Pattern**
    Centralizes sink creation
    • Hides implementation details
    • Decouples client from concrete types
    • Easy to extend with new sinks
end note

note right of LogManagerBuilder
    **Builder Pattern**
    Fluent API for LogManager construction
    • Method chaining (.addSink().build())
    • Clear and readable initialization
    • Separates construction from representation
end note

note right of RingBuffer
    **Generic Template**
    Type-safe circular buffer
    • Move-only semantics
    • Fixed capacity
    • tryPush/tryPop interface
    • Used by LogManager for message buffering
end note

' ============================================================================
' LEGEND
' ============================================================================

legend bottom left
    **Relationship Types**
    |= Symbol |= Meaning |
    | <|.. | Interface Implementation |
    | *-- | Composition (owns) |
    | o-- | Aggregation (manages) |
    | --> | Dependency/Usage |
    | ..> | Creates/Instantiates |

    **Design Patterns Used**
    • **Strategy Pattern**: ILogSink, ITelemetrySource
    • **Factory Pattern**: LogSinkFactory
    • **Builder Pattern**: LogManagerBuilder
    • **Policy-Based Design**: LogFormatter<Policy>
    • **RAII Pattern**: SafeFile, SafeSocket
    • **Template Programming**: RingBuffer<T>, LogFormatter<Policy>
end legend

@enduml
